# quad_cam_streamer

./: .gitignore  CMakeLists.txt  README.md  S99quad_cam_streamer  Untitled  build.sh  build_local.sh  config.json  disable_ov9281_rkaiq.sh  remove_ov9281_iq.sh  start_rkaiq_server.sh
calib/: cam0_sensor.yaml  cam1_sensor.yaml  cam2_sensor.yaml  cam3_sensor.yaml  imu_left_sensor.yaml  imu_right_sensor.yaml  imu_sensor.yaml
docs/: ble_time_sync_protocol.md
src/: audio_player.cpp  audio_player.h  auto_exposure.cpp  auto_exposure.h  ble_imu_manager.cpp  ble_imu_manager.h  config.cpp  config.h  euroc_recorder.cpp  euroc_recorder.h  imu_reader.cpp  imu_reader.h  key_monitor.cpp  key_monitor.h  main.cpp  mpp_encoder.cpp  mpp_encoder.h  param_controller.cpp  param_controller.h  pwm_sync.cpp  pwm_sync.h  rkaiq_controller.cpp  rkaiq_controller.h  serial_imu_reader.cpp  serial_imu_reader.h  v4l2_camera.cpp  v4l2_camera.h  zmq_streamer.cpp  zmq_streamer.h
tools/: key_event_receiver.py
tools/quad_calibration/: README.md  config.json  quad_calibrate.py  requirements.txt
tools/quad_calibration/calib_images/: capture_meta.json
tools/quad_calibration/calib_output/: calibration_full.json
tools/quad_calibration/calib_output/cam0_imx334_0/: sensor.yaml
tools/quad_calibration/calib_output/cam1_imx334_1/: sensor.yaml
tools/quad_calibration/calib_output/cam2_ov9281_0/: sensor.yaml
tools/quad_calibration/calib_output/cam3_ov9281_1/: sensor.yaml
tools/zmq_viewer/: README.md  config.json  requirements.txt  test_query.py  zmq_viewer.py
